2005-03-01  Tom Tromey  <tromey@redhat.com>

	* tree.cc (wrap_synchronized): Set DECL_CONTEXT on new variable.

	* treegen.cc (generate): Skip abstract methods.

	* tree.cc (visit_if): Handle case where there is no 'else'
	statement.

	* abi.cc (get_vtable_index): Handle final methods from Object.

	* builtins.cc (lay_out_class): Skip types that already have
	fields.

2005-03-01  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (find_decl): Restructured to use assert instead of
	abort.

2005-02-28  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (add): Only set DECL_EXTERNAL for static fields.

2005-02-28  Tom Tromey  <tromey@redhat.com>

	* decl.cc (pushdecl_primitive): New function.
	(initialize_gcc_primitive_types): Use it.

2005-02-28  Tom Tromey  <tromey@redhat.com>

	* decl.cc (initialize_gcc_primitive_types): Make jchar an ordinary
	unsigned integer, not a CHAR_TYPE.

2005-02-28  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): For virtual dispatch, wrap object in
	SAVE_EXPR.

2005-02-27  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (lay_out_class): Changed type of "data" field of
	arrays.

2005-02-26  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_field_reference): Initialize class.
	* builtins.cc (build_class_init): New method.
	* builtins.hh (tree_builtins::build_class_init): Declare.
	* tree.cc (visit_method): Initialize class.

2005-02-26  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::build_ref_from_constant_pool):
	Updated.
	* tree.cc (build_ref_from_constant_pool): Added 'type' argument.
	(build_jni_stub): Updated.
	(handle_string_literal): Updated.

	* builtins.cc (HACK_WANT_OUTPUT_H): Define.
	* glue.hh: Use HACK_WANT_OUTPUT_H.

	* abi.cc (build_class_reference): Find constant pool.
	* tree.cc (build_ref_from_constant_pool): Wrote.
	* builtins.cc (get_constant_pool_decl): New method.
	* builtins.hh (tree_builtins::cpool_map): New field.
	(tree_builtins::get_constant_pool_decl): Declare.