@@ -1,3 +1,7 @@
+2005-03-03  Tom Tromey  <tromey@redhat.com>
+
+	* tree.cc (visit_field_initializer): Wrote.
+
 2005-03-01  Tom Tromey  <tromey@redhat.com>
 
 	* tree.cc (wrap_synchronized): Set DECL_CONTEXT on new variable.
